Updated wording and icon colors

--- a/start-page/beta/index.html
+++ b/start-page/beta/index.html
@@ -10,29 +10,29 @@
 {% block main %}
       <header>
         <h1>{{ self.title() }}</h1>
-        <p>{{ _('You are using the beta version of Thunderbird, which means you get to experience the new Thunderbird before the rest of our users! But with great power comes great responsibility, we hope you’ll take the time to report bugs and provide feedback on your experience using the Beta version and help make the next Thunderbird release as awesome as possible.') }}</p>
+        <p>{{ _('You are using the beta version of Thunderbird, which means you get to experience improvements and fixes before the rest of our users! But with great power comes great responsibility, we hope you’ll take the time to report bugs and provide feedback on your experience. Thank you for helping to make the next Thunderbird release as awesome as possible.') }}</p>
       </header>
       <div>
         <section>
-          <h2><i class="far fa-life-ring" style="color:Blue"></i>{{ _('<a href="%(support)s">Get Support</a>')|format(support='https://support.mozilla.org/products/thunderbird') }}</h2>
-          <p>{{ _('You’re using the Beta, so bear in mind there may be some rough edges. If you need help setting up an account or learning to do something else in Thunderbird - you can check out our <a href="%(support)s">support page</a>. If you believe you are encountering a bug, please use the “report a bug” link below, otherwise you can ask a <a href="%(new)s">new question</a>.')|format(support='https://support.mozilla.org/products/thunderbird', new='https://support.mozilla.org/questions/new/thunderbird') }}</p>
+          <h2><i class="far fa-life-ring" style="color:#0060df"></i> {{ _('<a href="%(support)s">Get Support</a>')|format(support='https://support.mozilla.org/products/thunderbird') }}</h2>
+          <p>{{ _('You’re using the Beta, so bear in mind there may be some rough edges. If you need help setting up an account or learning to do something else in Thunderbird - you can check out our <a href="%(support)s">support page</a>. We have a <a href="%(discourse)s">Beta</a> category on our forum where you can discuss the release and meet other Beta users. If you believe you are encountering a bug, please use the “report a bug” link below, otherwise you can ask a <a href="%(new)s">new question</a>.')|format(support='https://support.mozilla.org/products/thunderbird', discourse='https://discourse.mozilla.org/c/thunderbird/beta', new='https://support.mozilla.org/questions/new/thunderbird') }}</p>
         </section>
         <section>
-          <h2><i class="fas fa-bug" style="color:Green"></i>{{ _('<a href="%(bug)s">Report a Bug</a>')|format(bug='https://bugzilla.mozilla.org/describecomponents.cgi?product=Thunderbird') }}</h2>
+          <h2><i class="fas fa-bug" style="color:#058b00"></i> {{ _('<a href="%(bug)s">Report a Bug</a>')|format(bug='https://bugzilla.mozilla.org/describecomponents.cgi?product=Thunderbird') }}</h2>
           <p>{{ _('Think you\'ve found a problem with Thunderbird Beta? <a href="%(bug)s">Create a bug report</a> so that we can make sure it gets solved. Helping us identify and fix bugs makes for a better Thunderbird experience for all.')|format(bug='https://bugzilla.mozilla.org/describecomponents.cgi?product=Thunderbird') }}</p>
         </section>
       </div>
       <div>
         <section>
-          <h2><i class="fas fa-heart"  style="color:Tomato"></i>{{ _('<a href="%(donate)s">Donate</a>')|format(donate='https://donate.mozilla.org/en-US/thunderbird/?presets=100,50,25,15&amount=50&utm_source=start_page_thunderbird&utm_medium=referral&utm_content=header&currency=usd') }}</h2>
-          <p>{{ _('Thunderbird is both free and freedom respecting, but we\'re also completely funded by donations! The best way to ensure Thunderbird remains available and awesome is to donate so that the project can hire developers, pay for infrastructure, and continue to improve.') }}</p>
+          <h2><i class="fas fa-heart"  style="color:#ff0039"></i> {{ _('<a href="%(donate)s">Donate</a>')|format(donate='https://donate.mozilla.org/en-US/thunderbird/?presets=100,50,25,15&amount=50&utm_source=start_page_thunderbird&utm_medium=referral&utm_content=header&currency=usd') }}</h2>
+          <p>{{ _('Thunderbird is both free and freedom respecting, but we\'re also completely funded by donations! The best way for you to ensure Thunderbird remains available and awesome is to donate so that the project can hire developers, pay for infrastructure, and continue to improve.') }}</p>
         </section>
         <section>
-          <h2><i class="fas fa-hands-helping" style="color:Purple"></i>{{ _('<a href="%(contribute)s">Get Involved</a>')|format(contribute='https://wiki.mozilla.org/Thunderbird#contributing') }}</h2>
+          <h2><i class="fas fa-hands-helping" style="color:#ed00b5"></i> {{ _('<a href="%(contribute)s">Get Involved</a>')|format(contribute='https://wiki.mozilla.org/Thunderbird#contributing') }}</h2>
           <p>{{ _('Don’t just use the Beta, help make it better! Thunderbird is an open source project, which means anyone can contribute ideas, designs, and code to it. <a href="%(contribute)s">Join us</a> and become a part of the team that creates Thunderbird.')|format(contribute='https://wiki.mozilla.org/Thunderbird#contributing') }}</p>
         </section>
         <section>
-          <h2>{{ _('Submit Crash Reports') }}</h2>
+          <h2><i class="fas fa-exclamation-circle"></i> {{ _('Submit Crash Reports') }}</h2>
           <p>{{ _('Please use the Crash Reporter and turn it on when it asks. The Crash Reporter gives us really valuable data on which crashes are the most serious, and how often people encounter them. Click ‘OK’ when the Crash Reporter prompts you to send feedback.') }}</p>
         </section>
       </div>
