Incorporated fontawesome locally.

--- a/start-page/_base-resp.html
+++ b/start-page/_base-resp.html
@@ -10,8 +10,8 @@
     <title>{% filter striptags|e %}{% block title %}{% endblock %}{% endfilter %}</title>
     {{ l10n_css() }}
     <link href="/media/css/start-style.css" rel="stylesheet" type="text/css" />
-    <!--Fontawesome loads asynchronously, so we should be safe from breakage. -->
-    <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
+    <!-- Fontawesome added below -->
+    <script defer src="/media/js/fontawesome-all.js"></script>
   </head>
   <body class="sky">
     <main>
