Removed mention of Earlybird.
Can continue to make improvements, but for now removing mention to Earlybird.

--- a/website/channel/index.html
+++ b/website/channel/index.html
@@ -4,8 +4,8 @@
 
 {% extends "_includes/base-resp.html" %}
 
-{% block page_title %}{{ _('Download Thunderbird Earlybird or Beta &amp; Help Determine the Next Thunderbird') }}{% endblock %}
-{% block page_desc %}{{ _('Download and test Thunderbird future releases. Experience the newest innovations with the Earlybird or Beta builds.') }}{% endblock %}
+{% block page_title %}{{ _('Download Thunderbird Beta &amp; Try the Next Thunderbird') }}{% endblock %}
+{% block page_desc %}{{ _('Download and test Thunderbird Beta and experience features and fixes early!') }}{% endblock %}
 
 {% block body_id %}channel{% endblock %}
 
@@ -16,7 +16,7 @@
 {% block content %}
   <header id="main-feature">
     <h1>{{ _('Welcome to the <strong>Future of Thunderbird</strong>') }}</h1>
-    <h2>{{ _('Download Earlybird or Thunderbird Beta and be one of the first to try the newest features in the next version of Thunderbird! By giving us your feedback, you’ll help make email better for millions of your fellow users.') }}</h2>
+    <h2>{{ _('Download Thunderbird Beta and be one of the first to try the newest features in the next version of Thunderbird! By giving us your feedback, you’ll help make email better for millions of your fellow users.') }}</h2>
   </header>
 
   <main role="main">
