More revisions due to feedback from @mkmelin.

--- a/website/get-involved/index.html
+++ b/website/get-involved/index.html
@@ -60,6 +60,9 @@
                         <li>{{ _('<a href="https://hg.mozilla.org/comm-central/">comm-central</a> is the main
                             Thunderbird repository.') }}
                         </li>
+                        <li>{{ _('Thunderbird also relies on the code from <a href="https://hg.mozilla.org/mozilla-central/">mozilla-central</a>. See the <a
+                                href="https://developer.mozilla.org/en-US/docs/Mozilla/Developer_guide/Build_Instructions">build instructions</a> for how to obtain all the code needed to build.') }}</li>
+                        <li>There is a <a href="https://dxr.mozilla.org/comm-central/source/">searchable DXR instance</a> that you can use to search through the code.</li>
                     </ul>
                     <p>{{ _('There is also some code hosted on GitHub.') }}</p>
                     <ul>
@@ -77,6 +80,7 @@
                         Bugzilla is a powerful tool and can be intimidating if you are not used to it. So check out
                         these pre-defined searches to test the waters:') }}</p>
                     <ul>
+                        <li>You can help out by triaging <a href="https://bugzilla.mozilla.org/buglist.cgi?product=Thunderbird&component=Untriaged&resolution=---">incoming bugs</a>. Known bugs should be marked as duplicates, unconfirmed bugs often needs someone to see if they too can reproduce.</li>
                         <li>{{ _('<a href="https://mzl.la/2oijxOd">"Good first bugs"</a> which are extra easy to try and fix when you are just starting out.') }}</li>
                         <li>{{ _('<a href="http://www.joshmatthews.net/bugsahoy/?thunderbird=1">Mentored Bugs</a> have a
                             mentor who commits to helping you every step of the way.') }}
@@ -229,7 +233,6 @@
                     <ul>
                         <li>{{ _('<a href="irc://irc.mozilla.org/maildev">#maildev</a> - For hacking on Thunderbird.') }}</li>
                         <li>{{ _('<a href="irc://irc.mozilla.org/thunderbird">#thunderbird</a> - For general questions and support.') }}</li>
-                        <li>{{ _('<a href="irc://irc.mozilla.org/instantbird">#instantbird</a> - For chatting.') }}</li>
                         <li>{{ _('<a href="irc://irc.mozilla.org/tb-qa">#tb-qa</a> - For QA chat.') }}</li>
                     </ul>
                 </section>
