Implemented icons via css.

--- a/start-page/_base-resp.html
+++ b/start-page/_base-resp.html
@@ -11,7 +11,8 @@
     {{ l10n_css() }}
     <link href="/media/css/start-style.css" rel="stylesheet" type="text/css" />
     <!-- Fontawesome added below -->
-    <script defer src="/media/js/fontawesome-all.js"></script>
+    <link href="/media/css/fontawesome-all.css" rel="stylesheet">
+    <!--<script defer src="/media/js/fontawesome-all.js"></script>-->
   </head>
   <body class="sky">
     <main>
