More changes to reflect feedback received in the pull request.

--- a/website/get-involved/index.html
+++ b/website/get-involved/index.html
@@ -62,7 +62,7 @@
                         </li>
                         <li>{{ _('Thunderbird also relies on the code from <a href="https://hg.mozilla.org/mozilla-central/">mozilla-central</a>. See the <a
                                 href="https://developer.mozilla.org/en-US/docs/Mozilla/Developer_guide/Build_Instructions">build instructions</a> for how to obtain all the code needed to build.') }}</li>
-                        <li>There is a <a href="https://dxr.mozilla.org/comm-central/source/">searchable DXR instance</a> that you can use to search through the code.</li>
+                        <li>You can search the code on <a href="https://dxr.mozilla.org/comm-central/source/">DXR</a>.</li>
                     </ul>
                     <p>{{ _('There is also some code hosted on GitHub.') }}</p>
                     <ul>
@@ -80,7 +80,7 @@
                         Bugzilla is a powerful tool and can be intimidating if you are not used to it. So check out
                         these pre-defined searches to test the waters:') }}</p>
                     <ul>
-                        <li>You can help out by triaging <a href="https://bugzilla.mozilla.org/buglist.cgi?product=Thunderbird&component=Untriaged&resolution=---">incoming bugs</a>. Known bugs should be marked as duplicates, unconfirmed bugs often needs someone to see if they too can reproduce.</li>
+                        <li>You can help out by triaging <a href="https://bugzilla.mozilla.org/buglist.cgi?list_id=14114741&chfieldto=Now&query_format=advanced&chfield=%5BBug%20creation%5D&chfieldfrom=-3d&product=MailNews%20Core&product=Thunderbird">incoming bugs</a>. Known bugs should be marked as duplicates, unconfirmed bugs often needs someone to see if they too can reproduce.</li>
                         <li>{{ _('<a href="https://mzl.la/2oijxOd">"Good first bugs"</a> which are extra easy to try and fix when you are just starting out.') }}</li>
                         <li>{{ _('<a href="http://www.joshmatthews.net/bugsahoy/?thunderbird=1">Mentored Bugs</a> have a
                             mentor who commits to helping you every step of the way.') }}
@@ -242,6 +242,7 @@
                         <li>{{ _('<a href="https://wiki.mozilla.org/Thunderbird/tb-planning">tb-planning</a> (<a href="https://groups.google.com/forum/#!forum/tb-planning">Google Group Mirror</a>) - For high
                             level topics.') }}
                         </li>
+                        <li>{{ _('<a href="http://lists.thunderbird.net/mailman/listinfo/maildev_lists.thunderbird.net">Maildev</a> - A moderated mailing list for Thunderbird Engineering plans.') }}</li>
                         <li>{{ _('<a href="https://wiki.mozilla.org/Thunderbird/tb-support-crew">tb-support-crew</a> -
                             For those who help the users.') }}
                         </li>
@@ -251,7 +252,7 @@
                         </li>
                         <li>{{ _('<a
                                 href="https://lists.mozilla.org/listinfo/dev-apps-thunderbird">dev-apps-thunderbird</a>
-                            (<a href="https://groups.google.com/forum/#!forum/mozilla.dev.apps.thunderbird">Google Group Mirror</a>) - For technical and code related discussions, such as add-ons.') }}
+                            (<a href="news://news.mozilla.org/mozilla.dev.apps.thunderbird">Newsgroup</a> ) (<a href="https://groups.google.com/forum/#!forum/mozilla.dev.apps.thunderbird">Google Group Mirror</a>) - For technical and code related discussions, such as add-ons.') }}
                         </li>
                         <li>{{ _('<a href="https://wiki.mozilla.org/Thunderbird/tb-enterprise">tb-enterprise</a> -
                             For ADMINISTRATORS to discuss large scale deployment and configuration of Thunderbird.') }}
