Added #extdev irc channel.

--- a/website/get-involved/index.html
+++ b/website/get-involved/index.html
@@ -232,6 +232,7 @@
                         preferred IRC client.') }}</p>
                     <ul>
                         <li>{{ _('<a href="irc://irc.mozilla.org/maildev">#maildev</a> - For hacking on Thunderbird.') }}</li>
+                        <li>{{ _('<a href="irc://irc.mozilla.org/extdev">#extdev</a> - For building Thunderbird add-ons/extensions.') }}</li>
                         <li>{{ _('<a href="irc://irc.mozilla.org/thunderbird">#thunderbird</a> - For general questions and support.') }}</li>
                         <li>{{ _('<a href="irc://irc.mozilla.org/tb-qa">#tb-qa</a> - For QA chat.') }}</li>
                     </ul>
