Updated Beta Start Page (#30).
* Updated the wording on beta start page, added fontawesome icons to catch attention.

* Updated wording and icon colors

* Increased icon size on beta page, slightly.

* Incorporated fontawesome locally.

* Updated wording and added a couple of links (donate and Mozilla Crash).

* Implemented icons via css.

* Moved fontawesome font into fonts folder.

* Updated Get Involved Link

--- a/start-page/_base-resp.html
+++ b/start-page/_base-resp.html
@@ -10,6 +10,9 @@
     <title>{% filter striptags|e %}{% block title %}{% endblock %}{% endfilter %}</title>
     {{ l10n_css() }}
     <link href="/media/css/start-style.css" rel="stylesheet" type="text/css" />
+    <!-- Fontawesome added below -->
+    <link href="/media/css/fontawesome-all.css" rel="stylesheet">
+    <!--<script defer src="/media/js/fontawesome-all.js"></script>-->
   </head>
   <body class="sky">
     <main>
