--- a/start-page/release/index.html
+++ b/start-page/release/index.html
@@ -15,7 +15,7 @@
         <section>
           <h2>{{ _('Why we need donations') }}</h2>
               <p>
-              {{ _('<strong>Thunderbird is no longer funded by Mozilla.</strong> Fortunately there is an active community keeping it running and developing it further. But to survive long term, the project needs funding.') }}
+              {{ _('Thunderbird is no longer funded by Mozilla. Fortunately there is an active community keeping it running and developing it further. But to survive long term, the project needs funding.') }}
               </p>
               <p>
               {{ _('Thunderbird\'s funding goes toward the significant infrastructure and staff that must be maintained to deliver the application to our tens of millions of users. For Thunderbird to survive and continue to evolve, we need your support and ask for your donation today. All the money donated will go directly to funding Thunderbird development and infrastructure.') }}
