Fix background for addons maintenance page.

--- a/start-page/maintenance/index.html
+++ b/start-page/maintenance/index.html
@@ -9,10 +9,10 @@
     <meta name="robots" content="noindex">
     <title>Thunderbird Add-ons is down for maintenance.</title>
     {{ l10n_css() }}
-    <link href="/media/css/start-style.css" rel="stylesheet" type="text/css" />
+    <link href="https://start.thunderbird.net/media/css/start-style.css" rel="stylesheet" type="text/css" />
   </head>
   <body class="sky">
-    <img style="margin: auto; display:block;" src="https://www.thunderbird.net/media/img/thunderbird/landing/wordmark.png">
+    <img style="margin: auto; display:block;" src="https://start.thunderbird.net/media/img/thunderbird/landing/wordmark.png">
     <p style="font-family: 'Helvetica', 'Arial', sans-serif; font-size: 1.5em; text-align: center"> The Thunderbird Add-ons site is currently down for extended maintenance.<br><br>It should return by <span style="font-weight: bold;">July 12 21:00 UTC.</span></p>
   </body>
 </html>
