Change add-ons maintenance message.

--- a/start-page/maintenance/index.html
+++ b/start-page/maintenance/index.html
@@ -13,6 +13,9 @@
   </head>
   <body class="sky">
     <img style="margin: auto; display:block;" src="https://start.thunderbird.net/media/img/thunderbird/landing/wordmark.png">
-    <p style="font-family: 'Helvetica', 'Arial', sans-serif; font-size: 1.5em; text-align: center"> The Thunderbird Add-ons site is currently down for extended maintenance.<br><br>It should return by <span style="font-weight: bold;">July 12 21:00 UTC.</span></p>
+    <p style="font-family: 'Helvetica', 'Arial', sans-serif; font-size: 1.5em; text-align: center"> The Thunderbird Add-ons site is currently down for extended maintenance.<br><br>
+    File copy from the Firefox Add-ons site is taking significantly longer than expected. Due to this, we've further extended maintenance until at least July 13,
+    and potentially Monday.<br><br>
+    The site will return by <span style="font-weight: bold;">July 16 21:00 UTC at the latest.</span></p>
   </body>
 </html>
