Updated the language around contributing to Thunderbird.

--- a/start-page/release/index.html
+++ b/start-page/release/index.html
@@ -30,7 +30,7 @@
         </section>
         <section>
           <h2><i class="fas fa-hands-helping fa-lg" style="color:#ed00b5"></i> {{ _('<a href="%(contribute)s">Get Involved</a>')|format(contribute='https://www.thunderbird.net/get-involved/') }}</h2>
-          <p>{{ _('Thunderbird is an open source project, which means anyone can contribute ideas, designs, code, and time helping fellow users. Become a part of the team that creates Thunderbird. <a class="more" href="%(contribute)s">Join us</a>')|format(contribute='https://www.thunderbird.net/get-involved/') }}</p>
+          <p>{{ _('Thunderbird is an open source project, which means anyone can contribute ideas, designs, code, and time helping fellow users. Become part of a team that supports Thunderbird users, and makes Thunderbird awesome. <a class="more" href="%(contribute)s">Join us</a>')|format(contribute='https://www.thunderbird.net/get-involved/') }}</p>
         </section>
       </div>
       <div>
