--- a/start-page/release/index.html
+++ b/start-page/release/index.html
@@ -11,79 +11,36 @@
       <header>
         <h1>{{ self.title() }}</h1>
       </header>
-      {% if l10n_has_tag('thunderbird_startpage_donate_2016_06') %}
       <div>
         <section>
           <h2>{{ _('Why we need donations') }}</h2>
-          <p>
-           {{ _('You might already know that Thunderbird improvements are no longer paid for by Mozilla. Fortunately there is an active community keeping it running and developing it further. But to survive long term, the project needs funding.') }}
-          </p>
-          <p>
-           {{ _('Thunderbird is currently transitioning to an independent organization. Being independent, we can shape our own fate, but there is significant infrastructure that must be maintained to deliver the application to our tens of millions of users. For Thunderbird to survive and continue to evolve, we need your support and ask for your donation today. All the money donated will go directly to funding Thunderbird development and infrastructure.') }}
-          </p>
+              <p>
+              {{ _('Thunderbird is no longer funded by Mozilla. Fortunately there is an active community keeping it running and developing it further. But to survive long term, the project needs funding.') }}
+              </p>
+              <p>
+              {{ _('Thunderbird\'s funding goes toward the significant infrastructure and staff that must be maintained to deliver the application to our tens of millions of users. For Thunderbird to survive and continue to evolve, we need your support and ask for your donation today. All the money donated will go directly to funding Thunderbird development and infrastructure.') }}
+              </p>
         </section>
       </div>
       <div>
         <section>
-          <h2>{{ _('Donate to Thunderbird') }}</h2>
-          <p>
-            {{ _('Thunderbird is the leading open source, cross-platform email and calendaring client, free for business and personal use. We want it to stay secure and become even better.') }}
-          </p>
-          <p>
-            <strong>
-              {{ _('If you like Thunderbird, please consider a donation!') }}
-            </strong>
-            {{ _('By donating, you will help us to continue delivering an ad-free top-notch email client.') }}
-              <a class="more" href="https://donate.mozilla.org/thunderbird/">{{ _('Make a donation') }}</a>
-          </p>
+          <h2><i class="fas fa-heart fa-lg"  style="color:#ff0039"></i> {{ _('<a href="%(donate)s">Donate to Thunderbird</a>')|format(donate='https://donate.mozilla.org/en-US/thunderbird/?presets=100,50,25,15&amount=50&utm_source=start_page_thunderbird&utm_medium=referral&utm_content=header&currency=usd') }}</h2>
+            <p>{{ _('Thunderbird is the leading open source, cross-platform and calendaring client, free for business and personal use. We want it to stay secure and become even better. A donation will allow us to hire developers, pay for infrastructure, and continue to improve.') }}</p>
+            <p>{{ _('<strong>Thunderbird is funded by donations!</strong> The best way for you to ensure Thunderbird remains available is to <a class="more" href="%(donate)s">make a donation.</a>')|format(donate='https://donate.mozilla.org/en-US/thunderbird/?presets=100,50,25,15&amount=50&utm_source=start_page_thunderbird&utm_medium=referral&utm_content=header&currency=usd') }}</p>
+        </section>
+        <section>
+          <h2><i class="fas fa-hands-helping fa-lg" style="color:#ed00b5"></i> {{ _('<a href="%(contribute)s">Get Involved</a>')|format(contribute='https://www.thunderbird.net/get-involved/') }}</h2>
+          <p>{{ _('Thunderbird is an open source project, which means anyone can contribute ideas, designs, code, and time helping fellow users. Become part of a team that supports Thunderbird users, and makes Thunderbird awesome. <a class="more" href="%(contribute)s">Join us</a>')|format(contribute='https://www.thunderbird.net/get-involved/') }}</p>
         </section>
       </div>
       <div>
         <section>
-          <h2>{{ _('Other ways to contribute to Thunderbird') }}</h2>
-          <p>
-             {{ _('Now is a great time for you to get involved: writing code, testing, support, localization and more. Join a global community! Share your skills and pick up a few new ones along the way. Volunteer as much as you like. Or as little. It’s totally up to you.') }}
-              <a class="more" href="https://wiki.mozilla.org/Thunderbird#Contributing">{{ _('Learn more') }}</a>
-             </p>
+          <h2><i class="far fa-life-ring fa-lg" style="color:#0060df"></i> {{ _('<a href="%(support)s">Get Support</a>')|format(support='https://support.mozilla.org/products/thunderbird') }}</h2>
+          <p>{{ _('Need help with something in Thunderbird. We have a <a href="%(support)s">support page</a> where you ask questions and read knowledge base articles to learn how to use Thunderbird.')|format(support='https://support.mozilla.org/products/thunderbird') }}</p>
         </section>
-      </div>
-      {% else %}
-      <div>
         <section>
-          <h2>{{ _('Contribute to Thunderbird') }}</h2>
-          <p>{{ _('To ensure that Thunderbird continues to improve, as it has for the last ten years, active contributors <a href="%s">recently organized</a> to focus on the future.')|format('https://blog.mozilla.org/thunderbird/2014/11/thunderbird-reorganizes-at-2014-toronto-summit/') }}
-             {{ _('Now is a great time for you to <a href="%s" class="iconic">get involved</a>.')|format('https://wiki.mozilla.org/Thunderbird#Contributing') }}
-             {{ _('Please help us assist users of Thunderbird, and improve the Thunderbird product and eco-system.') }}</p>
-          <p>{{ _('We look forward to <a href="%s">hearing from you</a>.')|format('https://wiki.mozilla.org/Thunderbird#Contributing') }}</p>
-          <p><a class="more" href="https://wiki.mozilla.org/Thunderbird">{{ _('Learn more') }}</a></p>
+          <h2><i class="fas fa-bug fa-lg" style="color:#058b00"></i> {{ _('<a href="%(bug)s">Report a Bug</a>')|format(bug='https://bugzilla.mozilla.org/describecomponents.cgi?product=Thunderbird') }}</h2>
+          <p>{{ _('Think you\'ve found a problem with Thunderbird? <a href="%(bug)s">Create a bug report</a> so that we can make sure it gets solved. Helping us identify and fix bugs makes for a better Thunderbird for all.')|format(bug='https://bugzilla.mozilla.org/describecomponents.cgi?product=Thunderbird') }}</p>
         </section>
       </div>
-      {% endif %}
-      <div>
-        <section class="help">
-          <h2 class="iconic">{{ _('Need Support?') }}</h2>
-          {% if l10n_has_tag('thunderbird_startpage_donate_2016_06') %}
-          {# L10n: If your locale has a dedicated Thunderbird support forum, you can localize the URL to point there. -#}
-          <p>{{ _('Most Thunderbird support questions are answered in the <a href="%s">Knowledge Base</a>.')|format('https://support.mozilla.org/products/thunderbird') }}
-             {{ _('If you can’t find an answer, <a href="%s">ask your question in our support forum</a>.')|format(_('https://support.mozilla.org/questions/new/thunderbird')) }}</p>
-          {% else %}
-          {# L10n: If your locale has a dedicated Thunderbird support forum, you can localize the URL to point there. -#}
-          <p>{{ _('Most Thunderbird support questions are answered on the <a href="%s">Knowledge Base</a>.')|format('https://support.mozilla.org/products/thunderbird') }}
-             {{ _('If you can’t find an answer, <a href="%s">ask your question on our support forum</a>.')|format(_('https://support.mozilla.org/questions/new/thunderbird')) }}</p>
-          {% endif %}
-        </section>
-      </div>
-      <footer>
-        <nav>
-          <ul>
-            <li><a href="https://www.thunderbird.net/features/">{{ _('Features') }}</a></li>
-            <li><a href="https://blog.mozilla.org/thunderbird/">{{ _('Visit our blog') }}</a></li>
-            <li><a href="https://donate.mozilla.org/thunderbird/">{{ _('Donate') }}</a></li>
-            <li><a href="https://wiki.mozilla.org/Thunderbird#Contributing">{{ _('Contribute') }}</a></li>
-            <li><a href="https://support.mozilla.org/products/thunderbird/how">{{ _('Tips') }}</a></li>
-            <li><a href="https://addons.mozilla.org/thunderbird/">{{ _('Add-ons') }}</a></li>
-            <li><a href="https://support.mozilla.org/products/thunderbird">{{ _('Get help') }}</a></li>
-          </ul>
-        </nav>
-      </footer>
 {% endblock %}
