Fix holiday calendar letter index.

--- a/website/calendar/holidays/index.html
+++ b/website/calendar/holidays/index.html
@@ -37,7 +37,7 @@
   <div class="calendar-table billboard">
     <ul class="holiday-nav">
       {% for letter in letters -%}
-        <li><a href="{{ letter }}">{{ letter }}</a></li>
+        <li><a href="#{{ letter }}">{{ letter }}</a></li>
       {% endfor -%}
     </ul>
     <table class="data">
